# cpc-camp-slack-bot

./: .env.example  .gitignore  README.md  pyproject.toml  slack-app-manifest.yml
personas/: ada.md  friston.md  karl.md  maya.md
scripts/: setup-slack-app.sh
src/campbot/: audio_capture.py  brain.py  config.py  main.py  persona.py  session.py  slack_app.py  slides.py  transcript.py
